# vulkan-tutorial-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
resources/textures/Lava_01/: README.md
resources/viking-room/: README.md
shaders/: compile-shaders.bash  compile-shaders.ps1  shader.frag  shader.vert
src/: app.rs  lib.rs  main.rs  model.rs  mvp_matrix.rs  util.rs  vertex.rs
src/renderer/: buffers.rs  commands.rs  depth_tests.rs  devices.rs  extensions.rs  instance.rs  memory.rs  mod.rs  multisampling.rs  pipeline.rs  swapchain.rs  synchronization.rs  texture.rs  uniforms.rs  validation.rs
